# DocChunker

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.claudecode/: context.md
.github/workflows/: tests.yml
data/samples/: complex_document.docx
data/unittests/: README.md  sample_table.docx  test_nested_lists.docx  test_nested_lists.yaml  test_sample_table.yaml
docchunker/: __init__.py  chunker.py
docchunker/models/: chunk.py  document.py
docchunker/processors/: base.py  base_processor.py  document_chunker.py  docx_chunker.py  docx_parser.py  docx_processor.py  pdf_parser.py  pdf_processor.py
docchunker/utils/: io_utils.py  text_utils.py
examples/: RAG_demo.ipynb  basic_usage.py  bytes_processing_example.py  pdf_and_overlap_demo.py
tests/: conftest.py  test_chunker.py  test_docx_processor.py  test_models.py  test_overlap_functionality.py  test_pdf_processor.py  test_processors.py
