[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docchunker"
version = "0.2.0"
description = "A specialized document chunking library for complex DOCX and PDF document structures"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vlad Griguta", email = "vlad.griguta@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "python-docx>=0.8.11",
    "tiktoken>=0.9.0",
    "pypdf>=3.15.1",
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.1",
    "black>=23.9.1",
    "isort>=5.12.0",
    "ruff>=0.0.292",
    "pyyaml>=6.0.2",
    "notebook>=7.4.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "openai>=1.80.0",
    "faiss-cpu>=1.11.0",
]

[project.urls]
"Homepage" = "https://github.com/vladGriguta/DocChunker"
"Bug Tracker" = "https://github.com/vladGriguta/DocChunker/issues"

[tool.setuptools.packages.find]
include = ["docchunker*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"